--- a/extensions/consoledev/package.json
+++ b/extensions/consoledev/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "consoledev",
   "title": "Console Dev",
   "description": "An extension to discover the best tools and beta releases for developers (via console.dev)",
