--- a/extensions/doppler-share-secrets/package.json
+++ b/extensions/doppler-share-secrets/package.json
@@ -1,9 +1,11 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "doppler-share-secrets",
   "title": "Doppler Share Secrets",
   "description": "Share sensitive data (a \"secret\") with friends, teammates, or strangers on the internet.",
   "icon": "icon.png",
   "author": "thomas",
+  "license": "MIT",
   "commands": [
     {
       "name": "index",
