--- a/extensions/lark/package.json
+++ b/extensions/lark/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "lark",
   "title": "Lark Documents",
   "version": "0.0.3",
