--- a/extensions/airport/package.json
+++ b/extensions/airport/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "airport",
   "title": "Airport - Discover TestFlight Apps",
   "description": "Airport is the best place to discover new TestFlight apps from developers.",
