--- a/extensions/api-icon-list/package.json
+++ b/extensions/api-icon-list/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "api-icon-list",
   "title": "Raycast API Icon List",
   "author": "petr",
