--- a/extensions/bear/package.json
+++ b/extensions/bear/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "bear",
   "title": "Bear Notes",
   "description": "Control Bear with Raycast",
