--- a/extensions/brew/package.json
+++ b/extensions/brew/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "brew",
   "title": "Brew",
   "description": "Search and install Homebrew formulae",
