--- a/extensions/bugmenot/package.json
+++ b/extensions/bugmenot/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "bugmenot",
   "title": "BugMeNot",
   "version": "1.0.0",
