--- a/extensions/change-case/package.json
+++ b/extensions/change-case/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "change-case",
   "title": "Change Case",
   "description": "Transform a string between camelCase, snake_case, CONSTANT_CASE, and more",
@@ -9,7 +10,6 @@
     {
       "name": "change-case",
       "title": "Change Case",
-      "subtitle": "",
       "description": "Change the text in the clipboard",
       "mode": "view"
     }
