--- a/extensions/coffee/package.json
+++ b/extensions/coffee/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "coffee",
   "title": "Coffee",
   "description": "Prevent the sleep function on your mac",
