--- a/extensions/cratecast/package.json
+++ b/extensions/cratecast/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "cratecast",
   "title": "crates.io Search",
   "description": "Explore crates.io",
