--- a/extensions/dash/package.json
+++ b/extensions/dash/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "dash",
   "title": "Dash",
   "description": "Interface with the Dash application, allowing users to quickly search through documentation sets.",
