--- a/extensions/deepcast/package.json
+++ b/extensions/deepcast/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "deepcast",
   "title": "Deepcast",
   "description": "Translate words, or entire sentences, into 26 different languages using DeepL.",
