--- a/extensions/docker/package.json
+++ b/extensions/docker/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "docker",
   "title": "Docker",
   "description": "Manage Docker with Raycast",
