--- a/extensions/emoji/package.json
+++ b/extensions/emoji/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "emoji",
   "title": "Emoji Search",
   "description": "Finds emojis and inserts or copies them.",
@@ -9,7 +10,6 @@
     {
       "name": "emoji",
       "title": "Search Emoji",
-      "subtitle": "",
       "description": "Finds emojis and inserts or copies them.",
       "mode": "view"
     }
