--- a/extensions/envato/package.json
+++ b/extensions/envato/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "envato",
   "title": "Envato Sales",
   "version": "1.0.0",
