--- a/extensions/everhour/package.json
+++ b/extensions/everhour/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "everhour",
   "title": "Everhour Time Tracking",
   "description": "Track time against projects",
