--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "homeassistant",
   "title": "Home Assistant",
   "version": "1.2.2",
