--- a/extensions/lorem-ipsum/package.json
+++ b/extensions/lorem-ipsum/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "lorem-ipsum",
   "title": "Lorem Ipsum",
   "description": "Generate placeholder content",
