--- a/extensions/open-with-app/package.json
+++ b/extensions/open-with-app/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "open-with-app",
   "title": "Open With App",
   "description": "Choose an application to open the selected Finder items.",
