--- a/extensions/opsgenie/package.json
+++ b/extensions/opsgenie/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "opsgenie",
   "title": "Opsgenie",
   "description": "Manage Opsgenie alerts and incidents.",
