--- a/extensions/raindrop/package.json
+++ b/extensions/raindrop/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "raindrop-io",
   "title": "Raindrop.io",
   "version": "1.0.0",
