--- a/extensions/rebrandly/package.json
+++ b/extensions/rebrandly/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "rebrandly",
   "title": "Rebrandly",
   "description": "Browse Rebrandly shortlinks",
