--- a/extensions/tableplus/package.json
+++ b/extensions/tableplus/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "tableplus",
   "title": "TablePlus",
   "description": "Search and open database connections in TablePlus",
