--- a/extensions/twitter/package.json
+++ b/extensions/twitter/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "twitter",
   "title": "Twitter",
   "description": "Send and search Tweets",
@@ -40,7 +41,6 @@
       "name": "appkey",
       "type": "password",
       "title": "API-key",
-      "placeholder": "",
       "required": true,
       "default": "",
       "description": "Twitter API API-key"
@@ -49,7 +49,6 @@
       "name": "appsecret",
       "type": "password",
       "title": "App secret",
-      "placeholder": "",
       "required": true,
       "default": "",
       "description": "Twitter API App secret"
@@ -58,7 +57,6 @@
       "name": "accesstoken",
       "type": "password",
       "title": "Access token",
-      "placeholder": "",
       "required": true,
       "default": "",
       "description": "Twitter API access token"
@@ -67,7 +65,6 @@
       "name": "accesssecret",
       "type": "password",
       "title": "Access secret",
-      "placeholder": "",
       "required": true,
       "default": "",
       "description": "Twitter API access secret"
