--- a/extensions/two-factor-authentication-code-generator/package.json
+++ b/extensions/two-factor-authentication-code-generator/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "two-factor-authentication-code-generator",
   "title": "Two-Factor Authentication Code Generator",
   "description": "Quickly access your two-factor authentication codes.",
