--- a/extensions/youdao-translate/package.json
+++ b/extensions/youdao-translate/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "youdao-translate",
   "title": "Youdao Translate",
   "description": "Translate text using Youdao",
