--- a/extensions/kill-process/package.json
+++ b/extensions/kill-process/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "kill-process",
   "title": "Kill Process",
   "description": "Lists all running processes, ordered by CPU usage and allows killing one",
@@ -9,7 +10,6 @@
     {
       "name": "index",
       "title": "Kill Process",
-      "subtitle": "",
       "description": "Lists all running processes, ordered by CPU usage and allows killing one",
       "mode": "view"
     }
@@ -37,7 +37,7 @@
       "name": "shouldSearchInPaths",
       "type": "checkbox",
       "required": false,
-      "title": "",
+      "title": "Filtering",
       "label": "Filtering should search process paths",
       "description": "Some processes are named differently than the app itself. This flag determines whether\nthe path of the process should be searched for the query, or only the process name."
     },
@@ -53,7 +53,7 @@
       "name": "shouldShowPID",
       "type": "checkbox",
       "required": false,
-      "title": "",
+      "title": "Display",
       "label": "Show PID",
       "description": "Show process PID info."
     }
