--- a/extensions/dash/package.json
+++ b/extensions/dash/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@raycast/api": "^1.25.0",
     "fast-xml-parser": "^3.20.3",
+    "html-entities": "^2.3.2",
     "node-fetch": "^3.0.0",
     "tempy": "^2.0.0"
   },
