Google chrome add open tab feature (#256)
* Notion Extension

Adding Notion extension.

* Add Slack Extension

This extension allows you to search user and channel from a Slack workspace and open this conversion in the Slack app.

* Removing Slack

* Adding "How to" share database

* Adding "How to" share pages + Page empty state

* Delete extensions/notion directory

* Add New Tab Command

* Add New Tab Command

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/google-chrome/src/google-chrome-new-tab.tsx

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

--- a/extensions/google-chrome/package.json
+++ b/extensions/google-chrome/package.json
@@ -23,6 +23,13 @@
       "subtitle": "Google Chrome",
       "description": "Search browser history.",
       "mode": "view"
+    },
+    {
+      "name": "google-chrome-new-tab",
+      "title": "New Tab",
+      "subtitle": "Google Chrome",
+      "description": "Open a new Google Chrome tab.",
+      "mode": "view"
     }
   ],
   "preferences": [
