--- a/extensions/docker/package.json
+++ b/extensions/docker/package.json
@@ -2,6 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "docker",
   "title": "Docker",
+  "version": "1.1.0",
   "description": "Manage Docker with Raycast",
   "icon": "docker-icon.png",
   "author": "priithaamer",
