[Zotero Extension] FIX: make all icons at 512x512 resolution (#318)
* make all icons at 512x512 resolution

* modify icons for papers and books

* remove old dependency raycast from package.json

* fix nan year values in accesory title

* simplify command title

--- a/extensions/zotero/package.json
+++ b/extensions/zotero/package.json
@@ -10,7 +10,7 @@
   "commands": [
     {
       "name": "commandSearchZotero",
-      "title": "Search Zotero Database",
+      "title": "Search Database",
       "subtitle": "Zotero",
       "description": "Search Zotero",
       "mode": "view"
@@ -37,7 +37,6 @@
   "dependencies": {
     "@raycast/api": "^1.25.0",
     "node-fetch": "^3.0.0",
-    "raycast": "^1.0.8",
     "he": "^1.2.0"
   },
   "devDependencies": {
