add large text support (#333)

--- a/extensions/snake/package.json
+++ b/extensions/snake/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.25.2",
+    "bplist-parser": "^0.3.1",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
