Visual Studio Code - Project Manager: Add support for Git cached projects (#297)
* Add support for Git cached projects

* fix icon

* add index to key prop

Co-authored-by: Markus Langer <markus.langer@gis-ag.com>

--- a/extensions/visual-studio-code-project-manager/package.json
+++ b/extensions/visual-studio-code-project-manager/package.json
@@ -21,8 +21,8 @@
       "type": "textfield",
       "required": false,
       "default": "",
-      "title": "Path of the projects.json of the Project Manager",
-      "description": "Only used if you have moved it, otherwise leave blank"
+      "title": "Path of the 'Projects Location' of the Project Manager",
+      "description": "Only used if you have moved the 'Projects Location', otherwise leave blank"
     },
     {
       "name": "groupProjectsByTag",
