Amazon AWS: Add a command to list SQS Queues (#339)
* Add a command to list SQS Queues

* Stop loading when no EC instances or queues and show errors

* Change case on Action Panel items

* Change error message when no credential file found

--- a/extensions/amazon-aws/package.json
+++ b/extensions/amazon-aws/package.json
@@ -13,6 +13,13 @@
       "subtitle": "Amazon AWS",
       "description": "List and Filter All your EC2 Instances",
       "mode": "view"
+    },
+    {
+      "name": "queues",
+      "title": "SQS Queues",
+      "subtitle": "Amazon AWS",
+      "description": "List All your SQS Queues",
+      "mode": "view"
     }
   ],
   "preferences": [
