Add preferences to Emoji, and print nicer names (#341)

--- a/extensions/emoji/package.json
+++ b/extensions/emoji/package.json
@@ -14,6 +14,34 @@
       "mode": "view"
     }
   ],
+  "preferences": [
+    {
+      "name": "unicodeVersion",
+      "type": "dropdown",
+      "required": false,
+      "title": "Unicode Version",
+      "description": "Unicode version to use (default: 13.1)",
+      "default": "13.1",
+      "data": [
+        { "title": "4.0", "value": "4.0"},
+        { "title": "5.0", "value": "5.0"},
+        { "title": "11.0", "value": "11.0"},
+        { "title": "12.0", "value": "12.0"},
+        { "title": "12.1", "value": "12.1"},
+        { "title": "13.0", "value": "13.0"},
+        { "title": "13.1", "value": "13.1"}
+      ]
+    },
+    {
+      "name": "shortCodes",
+      "type": "checkbox",
+      "required": false,
+      "title": "Shortcodes",
+      "label": "Add Shortcodes",
+      "default": false,
+      "description": "Add short codes to the emojis (e.g. zap for ⚡️) using GitHub Emoji API."
+    }
+  ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
     "generate-emoji-list": "^1.0.1",
