--- a/extensions/search-npm/package.json
+++ b/extensions/search-npm/package.json
@@ -35,6 +35,29 @@
       "required": false,
       "default": "npm",
       "value": "npm"
+    },
+    {
+      "name": "defaultOpenAction",
+      "type": "dropdown",
+      "data": [
+        {
+          "title": "Open Repository",
+          "value": "openRepository"
+        },
+        {
+          "title": "Open Homepage",
+          "value": "openHomepage"
+        },
+        {
+          "title": "npm Package Page",
+          "value": "npmPackagePage"
+        }
+      ],
+      "title": "Default Open Action",
+      "description": "How to open the selected package when Enter is pressed",
+      "required": false,
+      "default": "openRepository",
+      "value": "openRepository"
     }
   ],
   "dependencies": {
